--- a/src/pages/curso/curso.html
+++ b/src/pages/curso/curso.html
@@ -19,6 +19,7 @@
 <ion-content padding>
 
   <ion-list>
+     <img src="/assets/img/perfilinterno.png" alt="">
   <ion-item  text-wrap *ngFor="let curso of cursos | async">
     {{curso.title}}
   </ion-item>
