--- a/src/pages/extensao/extensao.html
+++ b/src/pages/extensao/extensao.html
@@ -20,6 +20,7 @@
 <ion-content >
 
   <ion-list>
+    <img src="/assets/img/Extensao2.jpg" alt="">
   <ion-item  text-wrap *ngFor="let extensao of extensoes | async">
 
     
