--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,6 +5,13 @@
     </button>
     <ion-title>Home</ion-title>
   </ion-navbar>
+  <ion-title style="text-align: center; margin-bottom: 25px; font-size: 16px;"></ion-title>
+ <div class = "row">
+   <div class = "col"><img src="/assets/img/logofacisa2.png" alt=""></div>
+   <div class = "col" align="right"><img src="/assets/img/si.png" alt="">  </div>
+ </div>
+ <!--<img src="/assets/img/logofacisa2.png" alt=""> -->
+ <!--<img src="/assets/img/si.png" alt=""> -->
 </ion-header>
 
 <ion-content  padding>
