--- a/src/pages/pesquisa/pesquisa.html
+++ b/src/pages/pesquisa/pesquisa.html
@@ -19,6 +19,7 @@
 <ion-content padding>
 
   <ion-list>
+    <img src="/assets/img/pesquisas.png" alt="">
   <ion-item  text-wrap *ngFor="let pesquisa of pesquisas | async">
     <h1 style="margin-bottom: 25px; text-align: center">{{pesquisa.title}}</h1>
     <p>{{pesquisa.descricao}}</p>
