com imagens vindo do firebase

--- a/src/pages/curso/curso.html
+++ b/src/pages/curso/curso.html
@@ -19,7 +19,7 @@
 <ion-content padding>
 
   <ion-list>
-     <img src="/assets/img/perfilinterno.png" alt="">
+     <img src="https://firebasestorage.googleapis.com/v0/b/mobilebase-ed7c1.appspot.com/o/perfilinterno.jpeg?alt=media&token=0b8cb8f3-5882-40e3-a9f8-551c644bffca">
   <ion-item  text-wrap *ngFor="let curso of cursos | async">
     {{curso.title}}
   </ion-item>
