--- a/src/pages/infra-curso/infra-curso.html
+++ b/src/pages/infra-curso/infra-curso.html
@@ -18,7 +18,7 @@
 <ion-content padding>
 
   <ion-list>
-     <img src="/assets/img/estrutura.png" alt="">
+     <img src="https://firebasestorage.googleapis.com/v0/b/mobilebase-ed7c1.appspot.com/o/estrutura.png?alt=media&token=ccb683a0-00e0-4d32-a6b4-7454a11f26ca" alt="">
   <ion-item  text-wrap *ngFor="let infra of infras | async">
     <h1 style="margin-bottom: 25px;">{{infra.title}}</h1>
     <p>{{infra.descricao}}</p>
