--- a/src/pages/matrizCurricular/matrizCurricular.html
+++ b/src/pages/matrizCurricular/matrizCurricular.html
@@ -14,7 +14,7 @@
 <ion-content padding>
 
   <ion-list>
-     <img src="/assets/img/matriz.png" alt="">
+     <img src="https://firebasestorage.googleapis.com/v0/b/mobilebase-ed7c1.appspot.com/o/matriz.png?alt=media&token=52ea9572-6000-41f5-a1ce-0fc9acbee5a2" alt="">
     <ion-item  text-wrap *ngFor="let matriz of matrizes | async">
       {{matriz.title}}
     </ion-item>
