--- a/src/pages/extensao/extensao.html
+++ b/src/pages/extensao/extensao.html
@@ -22,12 +22,7 @@
   <ion-list>
     <img src="https://firebasestorage.googleapis.com/v0/b/mobilebase-ed7c1.appspot.com/o/Extensao2.jpg?alt=media&token=7e98deb7-6c79-49f6-af05-a5781f4357b5" alt="">
   <ion-item  text-wrap *ngFor="let extensao of extensoes | async">
-
-
-
-      {{extensao.title}}
-
-
+      <p align="justify">{{extensao.title}}</p>
   </ion-item>
 </ion-list>
 
