--- a/src/pages/noticia-detalhe/noticia-detalhe.html
+++ b/src/pages/noticia-detalhe/noticia-detalhe.html
@@ -13,9 +13,9 @@
 </ion-header>
 
 <ion-content padding>  
-  <ion-list>
+  <ion-list *ngFor="let dado of dados | async">
   <ion-item >
-      
+      {{dado.descricao}}
   </ion-item>
 </ion-list>
 </ion-content>
