Correção de imagem com firebase

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
   <ion-title style="text-align: center; margin-bottom: 25px; font-size: 16px;"></ion-title>
  <div class = "row">
    <!--<div class = "col"><img src="/assets/img/logofacisa2.png" alt=""></div>-->
-   <div class = "col" align="right"><img src="/assets/img/si.png" alt="">  </div>
+   <div class = "col" align="right"><img src="https://firebasestorage.googleapis.com/v0/b/mobilebase-ed7c1.appspot.com/o/si.png?alt=media&token=d7cc621f-8e12-4dca-ba60-0f9069573bd6" alt="">  </div>
  </div>
  <!--<img src="/assets/img/logofacisa2.png" alt=""> -->
  <!--<img src="/assets/img/si.png" alt=""> -->
